New Heart icon and renamed giving in to submitting (in keeping with the theme!)

--- a/panstrap.less
+++ b/panstrap.less
@@ -118,7 +118,7 @@ svg { max-height: 100%; }
 #stats > *:first-child::before, [href$='#stats']::before { .image-link('suits');}
 [href$='#acuity']::before { .image-link('frontal-lobe');}
 [href$='#body']::before { .image-link('strong');}
-[href$='#heart']::before { .image-link('shining-heart');}
+[href$='#heart']::before { .image-link('heart-inside');}
 [href$='#will']::before { .image-link('burning-passion');}
 #traits > *:first-child::before, [href$='#traits']::before { .image-link('poker-hand');}
 #relationships > *:first-child::before, [href$='#relationships']::before { .image-link('telepathy');}
@@ -141,7 +141,7 @@ svg { max-height: 100%; }
 #change-the-game > *:first-child::before, #how-to-think-about-changing-the-game > *:first-child::before, [href$='#change-the-game']::before, a[href$='#how-to-think-about-changing-the-game']::before { .image-link('magic-swirl');}
 #traits-and-belongings > *:first-child::before, [href$='#traits-and-belongings']::before { .image-link('cubeforce');}
 #help > *:first-child::before, [href$='#help']::before { .image-link('all-for-one');}
-#give-in > *:first-child::before, #giving-in-is-awesome > *:first-child::before, [href$='#give-in']::before, a[href$='#giving-in-is-awesome']::before { .image-link('prayer');}
+#submitting > *:first-child::before, #submission-is-power > *:first-child::before, [href$='#submitting']::before, a[href$='#submission-is-power']::before { .image-link('prayer');}
 
 #fallout > *:first-child::before, #fallout-dice > *:first-child::before, #how-to-think-about-fallout > *:first-child::before, [href$='#fallout']::before, a[href$='#fallout-dice']::before, a[href$='#how-to-think-about-fallout']::before { .image-link('thunder-struck');}
 [href$='#safe']::before { .image-link('screaming'); }
