More section icons, red sections that need work

--- a/panstrap.less
+++ b/panstrap.less
@@ -137,11 +137,14 @@ svg { max-height: 100%; }
 #who-wins > *:first-child::before, [href$='#who-wins']::before { .image-link('life-in-the-balance');}
 #roll-stats-and-relationships > *:first-child::before, #need-more-dice > *:first-child::before, #how-to-think-about-dice > *:first-child::before, [href$='#roll-stats-and-relationships']::before, a[href$='#need-more-dice']::before, a[href$='#how-to-think-about-dice']::before { .image-link('cubes');}
 #challenge > *:first-child::before, [href$='#challenge']::before { .image-link('smoking-finger');}
+#the-higher-the-total-on-the-dice-the-better > *:first-child::before, [href$='#the-higher-the-total-on-the-dice-the-better']::before { .image-link('expand'; @author: 'delapouite'; @section: 'gui');}
 #response > *:first-child::before, [href$='#response']::before { .image-link('checked-shield');}
 #change-the-game > *:first-child::before, #how-to-think-about-changing-the-game > *:first-child::before, [href$='#change-the-game']::before, a[href$='#how-to-think-about-changing-the-game']::before { .image-link('transform'; @author: 'delapouite'; @section: 'gui');}
 #traits-and-belongings > *:first-child::before, [href$='#traits-and-belongings']::before { .image-link('cubeforce');}
 #help > *:first-child::before, [href$='#help']::before { .image-link('all-for-one');}
 #submit > *:first-child::before, #submission-is-power > *:first-child::before, [href$='#submit']::before, a[href$='#submission-is-power']::before { .image-link('prayer');}
+#fewer-dice-is-better > *:first-child::before, [href$='#fewer-dice-is-better']::before { .image-link('contract'; @author: 'delapouite'; @section: 'gui');}
+#push-forward-any-2-dice-from-your-pool > *:first-child::before, [href$='#push-forward-any-2-dice-from-your-pool']::before { .image-link('scissors'; @author: 'john-redman'; @section: 'hands');}
 
 #fallout > *:first-child::before, #fallout-dice > *:first-child::before, #how-to-think-about-fallout > *:first-child::before, [href$='#fallout']::before, a[href$='#fallout-dice']::before, a[href$='#how-to-think-about-fallout']::before { .image-link('thunder-struck');}
 [href$='#safe']::before { .image-link('screaming'); }
