Flesh out bulk NPC generation, fix trailing spaces

--- a/panstrap.less
+++ b/panstrap.less
@@ -175,6 +175,7 @@ figcaption > a[href$='#taking-the-blow']::before, [href$='#taking-the-blow']::be
 [href$='#my-life-depends-on-this']::before {.image-link('jump-across'; @author: 'delapouite')}
 [href$='#i-am-fighting-for-someone-i-love']::before {.image-link('transfuse')}
 #npc-crowds > *:first-child::before, [href$='#npc-crowds']::before { .image-link('dozen');}
+#forces-of-nature > *:first-child::before, [href$='#forces-of-nature']::before { .image-link('twister');}
 
 table:extend(.table all, .table-striped all) {}
 header:extend(.jumbotron all) {
